--- a/docker-compose.yml.sample
+++ b/docker-compose.yml.sample
@@ -8,6 +8,8 @@ services:
     restart: unless-stopped
     volumes:
       - ./config:/app/config
+    ports:
+      - 9595:9595
     environment:
       - TOKEN=1234567890:A1BCd2EF3gH45IJK6lMN7oPqr8ST9UvWX0Yz0  # get it from @BotFather
       - MANAGER=1234567890  # get it from @userinfobot
@@ -29,9 +31,9 @@ services:
 # ↓------ Advanced settings ------↓ #
       #- MULTIUSER=0  # default: 1
       #- CRON_SECOND=30  # 0-59, default: 0
-      #- DATABASE_URL=postgres://username:password@host:port/db_name  # default: sqlite://path/to/config/db.sqlite3
-      #- API_ID=1025907  # get it from https://core.telegram.org/api/obtaining_api_id
-      #- API_HASH=452b0359b988148995f22ff0f4229750  # get it from https://core.telegram.org/api/obtaining_api_id
+      - DATABASE_URL=postgres://username:password@host:port/db_name  # default: sqlite://path/to/config/db.sqlite3
+      - API_ID=1025907  # get it from https://core.telegram.org/api/obtaining_api_id
+      - API_HASH=452b0359b988148995f22ff0f4229750  # get it from https://core.telegram.org/api/obtaining_api_id
       #- IMG_RELAY_SERVER=https://images.weserv.nl/?url=  # default: https://rsstt-img-relay.rongrong.workers.dev/
       #- IMAGES_WESERV_NL=https://t0.nl/  # default: https://images.weserv.nl/
       #- USER_AGENT=Mozilla/5.0 (Android 12; Mobile; rv:68.0) Gecko/68.0 Firefox/96.0  # default: RSStT/2.2 RSS Reader
